--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <body >
     <main class="text-center col-12 mt-5 align-content-center">
-      <h1 class="h1">CAPILLA<br />VILLA SIBURU</h1>
+      <h1 class="h1">PARROQUIA<br />VILLA SIBURU</h1>
       <img class="col-2 img-fluid " src="./assets/img/logo.jpg" alt="LOGO MANTECO" /><br />
     </main>
 
