--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Reparaciones Manteco" />
+    <meta name="description" content="Parroquia nuestra señora de los ángeles" />
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content=" " />
     <meta name="author" content="Think Solutions" />
@@ -51,7 +51,7 @@
 
   <body >
     <main class="text-center col-12 mt-5 align-content-center">
-      <h1 class="h1">PARROQUIA<br />VILLA SIBURU</h1>
+      <h1 class="h1">PARROQUIA<br />NUESTRA SEÑORA DE LOS ÁNGELES</h1>
       <img class="col-2 img-fluid " src="./assets/img/logo.jpg" alt="LOGO MANTECO" /><br />
     </main>
 
@@ -66,7 +66,7 @@
    </div> 
 
   <div class="row col-12">
-    <label for="fecha_bautismo">Fecha de bautismo:</label>
+    <label for="fecha_bautismo">Fecha de confirmación:</label>
     <input type="date" id="fecha_bautismo" name="fecha_bautismo" required>
 
   </div> 
@@ -86,7 +86,7 @@
 
   <div class="row col-12">
     <a type="submit"
-  class="col-xs-12 col-sm-2 col-lg-4 btn btn-success my-2" onclick=" enviarDatos('asdfsdfs','sdfsdfsdf')">Boton</a>
+  class="col-xs-12 col-sm-2 col-lg-4 btn btn-success my-2" onclick=" enviarDatos()">Generar Certificado</a>
   <p>Version 1.08</p>
 
   </div> 
