--- a/pages/certificado.html
+++ b/pages/certificado.html
@@ -11,7 +11,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="../css/styles.css">
-   
+    <script src="../js/scripts.js"></script>
 </head>
 <body onload="tomarDatosCertificado()">
     <div class="container-fluid mt-3" id="container">
@@ -29,7 +29,7 @@
             </div>
         </div>
         <section class="container-fluid mt-2 border border-dark mx-5 my-5">
-            <h2 class="titulos">CERTIFICADO DE CONFIRMACIÓN</h2>
+            <h2 class="titulo"  id="titulo"></h2>
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
@@ -42,7 +42,7 @@
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.6/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="../js/scripts.js"></script>
+   
 </body>
 
 
