--- a/pages/certificado.html
+++ b/pages/certificado.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <section class="container-fluid mt-2 border border-dark mx-5 my-5">
-            <h2 class="titulo"  id="titulo"></h2>
+            <h2 id="titulo">CERTIFICADO DE </h2>
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
