Agregado de certificado abreviado

--- a/pages/certificadoAbreviado.html
+++ b/pages/certificadoAbreviado.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/scripts.js"></script>
   </head>
-  <body onload="tomarDatosCertificado()">
+  <body onload="tomarDatosCertificadoAbreviado()">
     <div class="container-fluid mt-3" id="container">
       <div class="row">
         <div class="col-2 px-0 mx-2">
