--- a/pages/certificadoAbreviado.html
+++ b/pages/certificadoAbreviado.html
@@ -63,7 +63,7 @@
           class="img-fluid w-25"
         />
 
-        <p>Padre Santos</p>
+        <p>Padre Santos Moyano</p>
       </div>
     </div>
 
