--- a/pages/certificadoAbreviado.html
+++ b/pages/certificadoAbreviado.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="row"></div>
-      <section class="container-fluid mt-2 border border-dark mx-5 my-5">
+      <section class="container-fluid border border-dark ">
         <h2 id="titulo">CERTIFICADO DE</h2>
 
         <div class="row">
@@ -48,7 +48,7 @@
         </div>
       </section>
 
-      <div class="row d-flex justify-content-center mt-5">
+      <div class="row d-flex justify-content-center ">
         <p>Para ser presentado a quien corresponda</p>
       </div>
       <div class="row d-flex" id="signature">
