--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
       </div>
     </main>
 
+    <section class="text-center col-12 mt-5 align-content-center">
+      <div class="row col-12 justify-content-center mt-5">
+        <a
+        type="submit"
+        class="col-5 btn btn-success"
+        onclick=" enviarConstancia()"
+        >Enviar Constancia</a
+      >  
+      </div>
+
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
